Fix logo and slogan on mobile

--- a/public/css/CCEI/global.css
+++ b/public/css/CCEI/global.css
@@ -94,6 +94,19 @@ hr {
   display: block;
   color: #26374a;
 }
+@media screen and (max-width: 767px) {
+  #subheader .ccei-logo {
+    display: block;
+  }
+  #subheader .ccei-logo>img {
+    border: none;
+    margin-bottom: 8px;
+  }
+  #subheader .slogan-container {
+    padding: 0;
+    margin-bottom: 48px;
+  }
+}
 #srch-bar button {
   padding: 10px 14px;
 }
@@ -521,10 +534,11 @@ details[open] {
 .topic-cntr {
   flex-grow: 1;
   flex-basis: 0;
-  display: table;
+  /* display: table; */
 }
 .topic-lnk {
-  display: table-cell;
+  /* display: table-cell; */
+  display: block;
   text-decoration: none;
   padding: 16px;
   min-width: 180px;
